fix controller npe warns